--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="col-6 bas rounded"></div>
             </div>
             <section>
-                <div class="row text-center bg-light pt-4 pb-4 rounded carrousel-container">
+                <div class="row text-center bg-secondary pt-4 pb-4 rounded carrousel-container">
                     <!-- colone de gauche -->
                     <div class="col-lg-1"></div>
                     <div class="hovereffect col-sm-12 col-lg-2 slide">
