--- a/index.html
+++ b/index.html
@@ -16,9 +16,29 @@
             <section>
                 <h1 class="rounded">ep 2 </h1>
                 <IFRAME SRC="https://uqload.net/embed-r4aigw3cak1l.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME>
+                <br>
+                <h1>Ep 3 </h1>
+                <IFRAME SRC="https://uqload.net/embed-b8elawptobpj.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME>
+                <br>
+                <h1>ep 4</h1>
+                <IFRAME SRC="https://uqload.net/embed-xp0mwda14vtu.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME>
+                <br>
+                <h1>Ep 5</h1>
+                <IFRAME SRC="https://uqload.net/embed-ldggh18i610a.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME>
+                <br>
+                <h1> ep 6</h1>
+                <IFRAME SRC="https://uqload.net/embed-1xw4tbvau4f9.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME>
             </section>
 
-</div>
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="assets/Js/config.js" lang="javascript"></script>
+</body>
+
+            </div>
 <div class="container mt-4">
         <div class="titre">
             <h1>ILS PARLENT DE NOUS !</h1>
@@ -51,15 +71,7 @@
             </a>
         </div>
     </div>
-</div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="assets/Js/config.js" lang="javascript"></script>
-</body>
-
-             <div class="row text-center bg-secondary pt-4 pb-4 rounded carrousel-container">
+</div> <div class="row text-center bg-secondary pt-4 pb-4 rounded carrousel-container">
                     <!-- colone de gauche -->
                     <div class="col-lg-1"></div>
                     <div class="hovereffect col-sm-12 col-lg-2 slide">
